--- a/app/src/main/res/layout/fragment_menu_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_menu_bottom_sheet.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"
-        android:text="Cart" />
+        android:text="Menu" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/menuRecyclerView"
