--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="87dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
@@ -47,7 +47,7 @@
             <TextView
                 android:id="@+id/menuAddToCart"
                 android:layout_width="80dp"
-                android:layout_height="20dp"
+                android:layout_height="30dp"
                 android:layout_marginTop="4dp"
                 android:background="@drawable/addtocart"
                 android:gravity="center"
