--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:title="History"
         android:id="@+id/historyFragment"
-        android:icon="@drawable/list"
+        android:icon="@drawable/history"
         />
     <item
         android:layout_width="wrap_content"
