--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,8 +9,9 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="307dp"
-        android:layout_height="199dp"
+        android:layout_width="350dp"
+        android:layout_height="280dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,8 +36,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:textColor="@color/textColor"
         android:text="Deliver Your Favourite Food"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintBottom_toTopOf="@id/textView3"
         app:layout_constraintStart_toStartOf="@+id/textView"
@@ -51,6 +53,7 @@
         android:textAlignment="center"
         android:textColor="@color/textColor"
         android:textSize="16sp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView2"
