--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/emailTextLogin"
         android:layout_width="250dp"
         android:layout_height="57dp"
         android:layout_marginTop="24dp"
@@ -72,7 +72,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <EditText
-        android:id="@+id/editTextNumberPassword"
+        android:id="@+id/passwordTextLogin"
         android:layout_width="250dp"
         android:layout_height="57dp"
         android:layout_marginTop="10dp"
@@ -82,12 +82,12 @@
         android:elevation="5dp"
         android:ems="10"
         android:hint="Password"
-        android:inputType="numberPassword"
+        android:inputType="textPassword"
         android:paddingLeft="15dp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintEnd_toEndOf="@+id/emailTextLogin"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintStart_toStartOf="@+id/emailTextLogin"
+        app:layout_constraintTop_toBottomOf="@+id/emailTextLogin" />
 
     <TextView
         android:id="@+id/textView9"
@@ -95,9 +95,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Or"
-        app:layout_constraintEnd_toEndOf="@+id/editTextNumberPassword"
-        app:layout_constraintStart_toStartOf="@+id/editTextNumberPassword"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />
+        app:layout_constraintEnd_toEndOf="@+id/passwordTextLogin"
+        app:layout_constraintStart_toStartOf="@+id/passwordTextLogin"
+        app:layout_constraintTop_toBottomOf="@+id/passwordTextLogin" />
 
     <TextView
         android:id="@+id/textView10"
