--- a/app/src/main/res/layout/activity_payout.xml
+++ b/app/src/main/res/layout/activity_payout.xml
@@ -24,19 +24,6 @@
             android:src="@drawable/arrow_left"
             android:text="Button" />
 
-        <TextView
-            android:id="@+id/textView29"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Edit"
-            android:layout_gravity="center"
-            android:textColor="@color/textColor"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButtonPayout" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="56dp"
@@ -66,7 +53,7 @@
                 android:ems="10"
                 android:inputType="text"
                 android:paddingLeft="5dp"
-                android:text="Name"
+                android:text="Admin"
                 android:textColor="@color/black" />
         </LinearLayout>
         <LinearLayout
