--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/nameRegistration"
         android:layout_width="325dp"
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress2"
+        android:id="@+id/emailRegistration"
         android:layout_width="325dp"
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
@@ -83,12 +83,12 @@
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:paddingLeft="15dp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextText"
-        app:layout_constraintStart_toStartOf="@+id/editTextText"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+        app:layout_constraintEnd_toEndOf="@+id/nameRegistration"
+        app:layout_constraintStart_toStartOf="@+id/nameRegistration"
+        app:layout_constraintTop_toBottomOf="@+id/nameRegistration" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/passwordRegistration"
         android:layout_width="325dp"
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
@@ -100,9 +100,9 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingLeft="15dp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress2"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />
+        app:layout_constraintEnd_toEndOf="@+id/emailRegistration"
+        app:layout_constraintStart_toStartOf="@+id/emailRegistration"
+        app:layout_constraintTop_toBottomOf="@+id/emailRegistration" />
 
     <TextView
         android:id="@+id/textView16"
@@ -111,9 +111,9 @@
         android:layout_marginTop="8dp"
         android:text="Or"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        app:layout_constraintEnd_toEndOf="@+id/passwordRegistration"
+        app:layout_constraintStart_toStartOf="@+id/passwordRegistration"
+        app:layout_constraintTop_toBottomOf="@+id/passwordRegistration" />
 
     <TextView
         android:id="@+id/textView17"
@@ -157,7 +157,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button6"
+        android:id="@+id/createAccount"
         android:layout_width="157dp"
         android:layout_height="57dp"
         android:layout_marginTop="16dp"
@@ -182,5 +182,5 @@
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintTop_toBottomOf="@+id/createAccount" />
 </androidx.constraintlayout.widget.ConstraintLayout>
