--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -5,7 +5,7 @@
     android:id="@+id/ingredienttextView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailsActivity">
+    tools:context=".activity.DetailsActivity">
 
     <ImageView
         android:id="@+id/imageButtonDetail"
