--- a/app/src/main/res/layout/activity_payout.xml
+++ b/app/src/main/res/layout/activity_payout.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".PayoutActivity">
+    tools:context=".activity.PayoutActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
