--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -74,7 +74,7 @@
                 android:id="@+id/minusButton"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="34dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/addtocart"
                 android:padding="2dp"
@@ -95,6 +95,7 @@
             <ImageButton
                 android:id="@+id/deleteButton"
                 android:layout_width="24dp"
+                android:visibility="invisible"
                 android:layout_height="24dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="16dp"
